# play-python

./: .gitignore  README.md  stdlib-names-312.txt  stdlib-names-313.txt
GIL/: bench.py  bench.sh
async/: async_demo.py  awaitable.py  gather_demo.py  terminate_demo.py  timeout_demo.py
chatterbox/: .pdbrc  ISSUEs.md  README.md  bench.py  common.py  generate.py  plot.R  requirements.txt  result-experiment_misc-20250618231759.csv  test-requirements.txt  test_watermark.py
concurrency/: concur_compute.py  concur_io.py
constants/: meows.py
diagram-as-code/: README.md  event.py  gcp.py  k8s-3-replica.py  on-prem-web-colored.py  on-prem-web-dot.py  on-prem-web-svg.py  on-prem-web.py  on-prem.dot  on-prem.tex  rabbitmq.py  three-tier-web.py
functional/: yell.py
generator/: gen.py  web-scrape.py
hvd-cs50/: cat.py  compare.py  itunes.py  mario.py  names.txt  number.py  say.py  sayings.py  students-entry.py  students.py  validate.py
instaviz/: ex.py  fib.py
intro/: calculator.py  costumes.py  generate.py  grade.py  hello.py  hogwarts.py  house.py  name.py  names.py  parity.py  students-entry-dict.csv  students.csv  students.py  test_calculator.py
misc/: char-msg.py  dict_comp.py  sleep.py  unpack.py  varargs.py
oop/: hat.py  student.py  vault.py  wizard.py
pdf-extract/: extract.ipynb  extract.py  requirements.txt
plotly/: README.md  requirements.txt  violin.ipynb  violin.py
print/: countdown.py  custom-datatype.py  (+6 more)
python-c-extension/: README.md  pyproject.toml  setup.py
python-c-extension/src/: fputs.c
python-c-extension/tests/: test_fputs.py
(+16 files in other folders)
